Updated server.js to serve frontend and backend

--- a/websocket-server/public/index.html
+++ b/websocket-server/public/index.html
@@ -14,12 +14,12 @@
       <form id="joinForm">
         <div class="input-group">
           <label for="username">Username:</label>
-          <input type="text" id="username" name="username" required>
+          <input type="text" id="username" name="username" placeholder="Enter Your Username" required>
         </div>
         
         <div class="input-group">
           <label for="group">Group Name:</label>
-          <input type="text" id="group" name="group" required>
+          <input type="text" id="group" name="group" placeholder="Enter Group Name" required>
         </div>
         
         <button type="submit">Join Group</button>
