--- a/websocket-server/public/login.html
+++ b/websocket-server/public/login.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Sign-Up Screen -->
-  <div id="signUpScreen">
+  <!-- Login Screen -->
+  <div id="loginScreen">
     <div class="login-container">
-      <h1>Create Account</h1>
-      <form id="signUpForm">
+      <h1>Login</h1>
+      <form id="loginForm">
         <div class="input-group">
           <label for="username">Username:</label>
           <input type="text" id="username" name="username" placeholder="Enter Your Username" required>
@@ -22,12 +22,7 @@
           <input type="password" id="password" name="password" placeholder="Enter Your Password" required>
         </div>
         
-        <div class="input-group">
-          <label for="displayName">Display Name:</label>
-          <input type="text" id="displayName" name="displayName" placeholder="Enter Your Display Name" required>
-        </div>
-        
-        <button type="submit">Sign Up</button>
+        <button type="submit">Login</button>
       </form>
     </div>
   </div>
